/**
 * Інтерфейс для перегляду пропозицій
 */
public interface Reviewable {
    void reviewOffer();
}