classDiagram
    %% --- Базовий клас ---
    class Deal {
        +id: int
        +date: string
        +status: string
        +confirm(): void
        +cancel(): void
    }

    %% --- Інтерфейс ---
    class Reviewable {
        <<interface>>
        +reviewOffer(): void
    }

    %% --- Абстрактний клас ---
    class Participant {
        <<abstract>>
        +name: string
        +contactInfo: string
        +getInfo(): string
        +getName(): string
        +getContactInfo(): string
        +setName(name): void
        +setContactInfo(contactInfo): void
    }

    %% --- Конкретні учасники ---
    class Buyer {
        -id: int
        -deposit: float
        +Buyer()
        +sendProposal(): void
        +finalizeDeal(): void
        +getId(): int
        +setId(id): void
        +getDeposit(): float
        +setDeposit(deposit): void
        +setDealService(DealService): void
    }

    class Agent {
        -id: int
        -agency: string
        +Agent()
        +organizeTour(): void
        +showProperty(): void
        +getId(): int
        +setId(id): void
        +getAgency(): string
        +setAgency(agency): void
        +setDealService(DealService): void
    }

    class Seller {
        -id: int
        -property: string
        +Seller()
        +counterOffer(): void
        +getId(): int
        +setId(id): void
        +getProperty(): string
        +setProperty(property): void
        +setDealService(DealService): void
    }

    class Bank {
        -name: string
        +Bank(name)
        +evaluateMortgage(): bool
    }

    %% --- Сервіс ---
    class DealService {
        <<singleton>>
        +saveDeal(Deal): void
        +saveBuyer(Buyer): void
        +saveAgent(Agent): void
        +saveSeller(Seller): void
        +findDealById(int): Deal
        +updateDealStatus(int, String): void
    }

    %% --- Модуль DI ---
    class RealestateModule {
        +configure(): void
    }

    %% --- Ієрархія ---
    Participant <|-- Buyer
    Participant <|-- Agent
    Participant <|-- Seller
    Participant <|-- Bank

    %% --- Відносини ---
    Buyer ..> Agent : "залежність (перегляд)"
    Buyer ..> Seller : "залежність (пропозиція)"
    Buyer ..> Bank : "залежність (іпотека)"

    Seller ..|> Reviewable : "реалізує"
    Agent ..|> Reviewable : "реалізує"

    Deal *-- Seller : "композиція"
    Deal o-- Bank : "агрегація"
    Deal *-- Buyer : "композиція"
    Deal o-- Agent : "агрегація"

    %% --- Впровадження залежностей ---
    Buyer --> DealService : "впровадження через setter"
    Agent --> DealService : "впровадження через setter"
    Seller --> DealService : "впровадження через setter"
    DealService --> Connection : "впровадження"

    RealestateModule --> DealService : "конфігурація"
    RealestateModule --> Connection : "конфігурація"
